--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-VERSION_NAME=1.4.0
-VERSION_CODE=15
+VERSION_NAME=1.4.1
+VERSION_CODE=16
 GROUP=com.yqritc
 ARTIFACT_ID=recyclerview-flexibledivider
 
-COMPILE_SDK_VERSION=23
+COMPILE_SDK_VERSION=28
 BUILD_TOOLS_VERSION=23.0.3
 TARGET_SDK_VERSION=23
-MIN_SDK_VERSION=9
+MIN_SDK_VERSION=14
 
 POM_DESCRIPTION=Android library providing simple way to control divider items of RecyclerView
 POM_URL=https://github.com/yqritc/RecyclerView-FlexibleDivider
@@ -20,3 +20,5 @@ POM_DEVELOPER_ID=yqritc
 POM_DEVELOPER_NAME=yqritc
 POM_DEVELOPER_EMAIL=yqritc@gmail.com
 ISSUE_URL=https://github.com/yqritc/RecyclerView-FlexibleDivider/issues
+android.useAndroidX=true
+android.enableJetifier=true
